--- a/css/lander-409e35.webflow.css
+++ b/css/lander-409e35.webflow.css
@@ -477,7 +477,7 @@ a {
 }
 
 .section.main {
-  background-color: #4263eb;
+  background-color: #299349;
   color: #fff;
 }
 
@@ -602,7 +602,7 @@ a {
   height: 300%;
   margin-left: -100%;
   border-radius: 100%;
-  background-color: #edf2ff;
+  background-color: #70da6d;
 }
 
 .mt-2xl-n {
